# deep-ressearch-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  agent.py  manual_write.py  prompts.py  pyproject.toml  run_query.py  test_file_write.py  tools.py
research_agent/: final_report.md
research_agent/analysis/: synthesis.md
research_agent/evidence/: search_results.md
research_agent/exploration/: insights.md
research_agent/large_tool_results/: call_function_ev3wtjop1oca_1  call_function_je83honlctot_3  call_function_r9ziwyug0nbr_1  call_function_zxadxjo6nryx_1
research_agent/outline/: current.md  outline.md  review_feedback.md
